@@ -1,3 +1,4 @@
+* Remove ir.action.wizard_size
 * Rename expand and fill attributes into yexpand and yfill
 * Add xalign and yalign as field attributes
 * Drop support of Python 2.5
